Bug 74708 Fixed so the sender name in collapsed messages in a conversation is only bolded when the message is unread.
http://bugzilla.zimbra.com/show_bug.cgi?id=74708

Copied from Perforce
 Change: 385697

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -997,9 +997,12 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 
 .Conv2MsgHeader .info .ZmConvListFrom {
 	@Text@
-	font-weight:bold;
 	margin:1px 0 3px;
 	overflow:hidden;
+}
+
+.Conv2MsgHeader .Unread .ZmConvListFrom {
+	font-weight:bold;
 }
 
 .Conv2MsgHeader .info .ZmConvListFragment {
